--- a/render.yaml
+++ b/render.yaml
@@ -28,6 +28,8 @@ services:
 
       - key: N8N_RUNNERS_ENABLED
         value: "true"
+			- key: N8N_DIAGNOSTICS_ENABLED
+        value: "false"
       - key: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
         value: "true"
 
